force-app/src/objects/cpm__Payment_Schedule__c.object
<CustomObject>
    <description>Object is used to schedule Payment Runs in the future</description>
    <fields>
        <fullName>cpm__Additional_SOQL__c</fullName>
        <description>Custom SOQL to limit the installments generated and/or included. Use with caution and test carefully. The query added here must start with &apos;AND&apos;.</description>
        <inlineHelpText>Custom SOQL to limit the installments generated and/or included. Use with caution and test carefully. The query added here must start with &apos;AND&apos;.</inlineHelpText>
        <label>Additional SOQL</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buckaroo</fullName>
                </value>
                <value>
                    <fullName>ProcessingHub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Close_Async_Apex_Job_Id__c</fullName>
        <label>Close Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Collection_Date__c</fullName>
        <description>Date when the payments should be collected by the bank. This is only used for direct debit methods with FinDock as processor (PaymentHub-BACS, PaymentHub-SEPA, etc.)</description>
        <inlineHelpText>Date when the payments should be collected by the bank. This is only used for direct debit methods with FinDock as processor (PaymentHub-BACS, PaymentHub-SEPA, etc.)</inlineHelpText>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Exclude_from_Auto_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you are creating a schedule that you want to run manually by changing the schedule status, please select this option. If Auto Run is enabled, this schedule will otherwise be run automatically.</inlineHelpText>
        <label>Exclude from Auto-Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Finished_Status__c</fullName>
        <description>This field is for using the payment schedule to create references for payslips (e.g. Acceptgiro, ESR, etc. payment methods). The Finished Status indicates in your org that the generated installments are ready for collection using your payslip process.</description>
        <inlineHelpText>This field is for using the payment schedule to create references for payslips (e.g. Acceptgiro, ESR, etc. payment methods). The Finished Status indicates in your org that the generated installments are ready for collection using your payslip process.</inlineHelpText>
        <label>Finished Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-- Provided by Sys Admin --</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Generator_Class__c</fullName>
        <label>Generator Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Hashcode__c</fullName>
        <label>Hashcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Hashcode_date__c</fullName>
        <label>Hashcode date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Job_Group_Identifier__c</fullName>
        <description>Field to store the Job group identifier from cpm__Job__c</description>
        <label>Job Group Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Status_Reason__c</fullName>
        <description>Optional additional information added in Last Status Reason field if the payment schedule fails.</description>
        <inlineHelpText>Optional additional information added in Last Status Reason field if the payment schedule fails.</inlineHelpText>
        <label>Last Status Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_Installments__c</fullName>
        <description>Number of installments in the schedule</description>
        <label>Total Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Original_Payment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Payment Schedule</label>
        <referenceTo>cpm__Payment_Schedule__c</referenceTo>
        <relationshipLabel>Payment Schedules</relationshipLabel>
        <relationshipName>Payment_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Journey</label>
        <referenceTo>cpm__Payment_Journey__c</referenceTo>
        <relationshipLabel>Payment Schedules</relationshipLabel>
        <relationshipName>Payment_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <description>Field get automatically populated in trigger and is used by ProcessingHub to define correct package</description>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__PaymentMethod__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-Stripe</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-Adyen</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-MT940</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Prepare_Async_Apex_Job_Id__c</fullName>
        <label>Prepare Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Prepare_SOQL_Query__c</fullName>
        <label>Prepare SOQL Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Process_Async_Apex_Job_Id__c</fullName>
        <label>Process Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Process_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>This field is for payment schedules that are used to create payment refrences for pay slips. If your org has record creation limits for batch jobs, set the payment schedule limit here for installment generation job. If unsure, leave this field with the default value.</description>
        <inlineHelpText>This field is for payment schedules that are used to create payment refrences for pay slips. If your org has record creation limits for batch jobs, set the payment schedule limit here for installment generation job. If unsure, leave this field with the default value.</inlineHelpText>
        <label>Process Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Processor_Class__c</fullName>
        <label>Processor Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Recurring_Payment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Payment Schedule</label>
        <referenceTo>cpm__Recurring_Payment_Schedule__c</referenceTo>
        <relationshipLabel>Payment Schedules</relationshipLabel>
        <relationshipName>Payment_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Report_Summary__c</fullName>
        <description>Report Summary on JSON format to use on PaymentScheduleReportSummary component</description>
        <label>Report Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Run_Date__c</fullName>
        <description>Date when payment schedule is run.</description>
        <inlineHelpText>Date when payment schedule is run.</inlineHelpText>
        <label>Run Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Selection_Date__c</fullName>
        <description>Installments with a due date on or before the selection date are collected if all other processing details match.</description>
        <inlineHelpText>Installments with a due date on or before the selection date are collected if all other processing details match.</inlineHelpText>
        <label>Selection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Status_Before_Failed__c</fullName>
        <label>Status Before Failed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <description>Set status to &apos;Scheduled&apos; unless otherwise instructed.</description>
        <inlineHelpText>Set status to &apos;Scheduled&apos; unless otherwise instructed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Processor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Council of International Schools</fullName>
                </value>
                <value>
                    <fullName>Main</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Total_Value__c</fullName>
        <description>Sum of the amount of all the child installments</description>
        <label>Total Value of Installments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Totals_Async_Apex_Job_Id__c</fullName>
        <description>Holds the id of the batch apex job for recalculating totals fields on the payment schedule schedule</description>
        <label>Totals Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Validate_Job_Id__c</fullName>
        <label>Validate Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Schedule</label>
    <listViews>
        <fullName>cpm__All_new</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{000000000}</displayFormat>
        <label>Payment Schedule Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__Collection_Date_must_be_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  AND(
     NOT(ISPICKVAL( cpm__Status__c , &apos;Verified&apos;))
   , NOT(ISPICKVAL( cpm__Status__c , &apos;Done&apos;))
   , NOT(ISPICKVAL( cpm__Status__c , &apos;Pending Verification&apos;))
   , OR(
      ISPICKVAL( cpm__PaymentMethod__c, &apos;Direct Debit&apos;)
      ,ISPICKVAL( cpm__PaymentMethod__c, &apos;Credit Transfer&apos;)
    )
   , OR(
       ISPICKVAL( cpm__Payment_Processor__c, &apos;PaymentHub-CH-DD&apos;)
     , ISPICKVAL( cpm__Payment_Processor__c, &apos;PaymentHub-LSV&apos;)
     , ISPICKVAL( cpm__Payment_Processor__c, &apos;PaymentHub-BACS&apos;)
   )
   , NOT(ISNULL( cpm__Collection_Date__c ))
   , NOT(ISCHANGED(cpm__Report_Summary__c))
   , NOT(ISCHANGED(cpm__Total_Value__c))
   , NOT(ISCHANGED(cpm__Nr_Of_Installments__c))
   , cpm__Collection_Date__c &lt;= TODAY()
) , true, false )</errorConditionFormula>
        <errorDisplayField>cpm__Collection_Date__c</errorDisplayField>
        <errorMessage>Collection Date must be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Collection_cant_be_in_the_past_for_SEPA</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    AND(
        NOT(ISPICKVAL( cpm__Status__c , &apos;Verified&apos;)),
        NOT(ISPICKVAL( cpm__Status__c , &apos;Done&apos;)),
        NOT(ISPICKVAL( cpm__Status__c , &apos;Pending Verification&apos;)),
        OR(
            ISPICKVAL( cpm__PaymentMethod__c, &apos;Direct Debit&apos;),
            ISPICKVAL( cpm__PaymentMethod__c, &apos;Credit Transfer&apos;)
        ),
        OR(
            ISPICKVAL( cpm__Payment_Processor__c, &apos;PaymentHub-SEPA&apos;),
            ISPICKVAL( cpm__Payment_Processor__c, &apos;DummyExtension-PSP&apos;)
        ),
        NOT(ISNULL( cpm__Collection_Date__c )),
        cpm__Collection_Date__c &lt; TODAY()
    ),
    true,
    false
)</errorConditionFormula>
        <errorDisplayField>cpm__Collection_Date__c</errorDisplayField>
        <errorMessage>Collection Date can&apos;t be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Lock_Fiscal_Period</fullName>
        <active>true</active>
        <errorConditionFormula>cpm__Collection_Date__c &lt;= $Setup.cpm__Lock_Fiscal_Periods__c.cpm__Lock_Payments_Up_To__c</errorConditionFormula>
        <errorMessage>Fiscal period is closed. You can&apos;t edit this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Mandatory_Field_Check</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( OR ( ISBLANK(TEXT(cpm__Payment_Processor__c)) , ISBLANK (TEXT(cpm__PaymentMethod__c)) , ISBLANK(TEXT(cpm__Source__c)) ), true, false )</errorConditionFormula>
        <errorMessage>Payment Method, Payment Processor and Source are required</errorMessage>
    </validationRules>
</CustomObject>